--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
     <application android:icon="@drawable/ic_launcher_camera"
             android:label="@string/camera_label"
+            android:vmSafeMode="true"
             android:taskAffinity="">
         <receiver android:name="com.android.camera.CameraButtonIntentReceiver">
             <intent-filter>
@@ -60,6 +61,11 @@
                 android:screenOrientation="landscape"
                 android:clearTaskOnLaunch="true"
                 android:taskAffinity="android.task.camcorder">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.media.action.VIDEO_CAMERA" />
                 <category android:name="android.intent.category.DEFAULT" />
